Fix map size on mobile view
Attempted fix for #63

--- a/_sass/map.scss
+++ b/_sass/map.scss
@@ -1,9 +1,8 @@
 #map {
-	width: 1000px;
-	height: 600px;
-	margin-left:auto;
-	margin-right:auto;
-	margin-bottom:auto;
+    aspect-ratio: 1.5;
+    max-width: 85%;
+    margin: auto;
+    border-radius: 0.4rem;
 }
 
 .marker {
